<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/LinearLayoutFila6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#000000"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="0.0"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            android:textStyle="bold"
            android:visibility="visible"
            tools:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutFila5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonOPC"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonOP_fondoAlterno"
            android:text="@string/ButtonOpC"
            android:textColor="@color/buttonOp_TextoAlterno"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonOpsim"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonOP_fondoAlterno"
            android:text="@string/ButtonOpSim"
            android:textColor="@color/buttonOp_TextoAlterno"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonOpPot"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonOP_fondoAlterno"
            android:text="@string/ButtonOpPot"
            android:textColor="@color/buttonOp_TextoAlterno"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonOpDiv"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonOp_fondo"
            android:text="@string/ButtonOpDiv"
            android:textColor="@color/buttonOp_Texto"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutFila4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDigSiete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_fondo"
            android:text="@string/ButtonDigSiete"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDigOcho"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_fondo"
            android:text="@string/ButtonDigOcho"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDigNueve"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_fondo"
            android:text="@string/ButtonDigNueve"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonOpMult"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonOp_fondo"
            android:text="@string/ButtonOpMult"
            android:textColor="@color/buttonOp_Texto"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutFila3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDigCuatro"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_fondo"
            android:text="@string/ButtonDigCuatro"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDigCinco"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_fondo"
            android:text="@string/ButtonDigCinco"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDigSeis"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_fondo"
            android:text="@string/ButtonDigSeis"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonOpResta"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonOp_fondo"
            android:text="@string/ButtonOpResta"
            android:textColor="@color/buttonOp_Texto"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutFila2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDigUno"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_fondo"
            android:text="@string/ButtonDigUno"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDigDos"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_fondo"
            android:text="@string/ButtonDigDos"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="36sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/buttonDigTres"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_fondo"
            android:text="@string/ButtonDigTres"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonOPSuma"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonOp_fondo"
            android:text="@string/ButtonOpSuma"
            android:textColor="@color/buttonOp_Texto"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutFila1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDigCero"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:background="@color/buttonDig_fondo"
            android:text="@string/ButtonDigCero"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDigPunto"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/buttonDig_fondo"
            android:text="@string/ButtonDigPunto"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonOPIgual"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/buttonOp_fondo"
            android:text="@string/ButtonOpIgual"
            android:textColor="@color/buttonOp_Texto"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>